--- a/package.json
+++ b/package.json
@@ -1,18 +1,93 @@
 {
-  "name": "huto",
+  "name": "hultar",
+  "productName": "Hültár",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Készítsd el virtuális hűtődet, bevásárló listádat, hogy sose felejts el semmit",
+  "main": "src/index.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "publish": "electron-forge publish",
+    "lint": "echo \"No linting configured\"",
+    "build-installer": "electron-builder"
   },
-  "author": "",
-  "license": "ISC",
+  "build": {
+    "appId": "hultar",
+    "win": {
+      "target": [
+        "nsis"
+      ],
+      "icon": "src/public/images/ikon.ico"
+    },
+    "nsis": {
+      "installerIcon": "src/public/images/ikon.ico",
+      "uninstallerIcon": "src/public/images/ikon.ico",
+      "uninstallDisplayName": "Hültár",
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true
+    }
+  },
+  "nsis": {
+    "installerIcon": "src/public/images/ikon.ico",
+    "uninstallerIcon": "src/public/images/ikon.ico",
+    "uninstallDisplayName": "Hültár",
+    "oneClick": "false",
+    "allowToChangeInstallationDirectory": true
+  },
+  "files": ["**/*"],
+  "extraResources": [
+    "./src/public/**",
+    "src/public",
+    "./src/public/*",
+    "./src/public"
+  ],
+
+  "keywords": [],
+  "author": {
+    "name": "Ris",
+    "email": "r.andriska05@gmail.com"
+  },
+  "license": "MIT",
+  "config": {
+    "forge": {
+      "packagerConfig": {},
+      "makers": [
+        {
+          "name": "@electron-forge/maker-squirrel",
+          "config": {
+            "name": "hultar"
+          }
+        },
+        {
+          "name": "@electron-forge/maker-zip",
+          "platforms": [
+            "darwin"
+          ]
+        },
+        {
+          "name": "@electron-forge/maker-deb",
+          "config": {}
+        },
+        {
+          "name": "@electron-forge/maker-rpm",
+          "config": {}
+        }
+      ]
+    }
+  },
   "dependencies": {
     "ejs": "^3.1.6",
-    "electron": "^13.2.3",
-    "electron-forge": "^5.2.4",
-    "express": "^4.17.1",
-    "socket.io": "^4.1.3"
+    "electron-squirrel-startup": "^1.0.0",
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "@electron-forge/cli": "^6.0.0-beta.61",
+    "electron-builder": "^22.11.7",
+    "@electron-forge/maker-deb": "^6.0.0-beta.61",
+    "@electron-forge/maker-rpm": "^6.0.0-beta.61",
+    "@electron-forge/maker-squirrel": "^6.0.0-beta.61",
+    "@electron-forge/maker-zip": "^6.0.0-beta.61",
+    "electron": "14.0.1"
   }
 }
